<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".presentation.planetDetail.PlanetDetailActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/bg_info"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/planet_img_info"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:elevation="40dp"
            android:src="@drawable/ic_earth"
            tools:ignore="ContentDescription" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-50dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/secondary"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="60dp">

                <TextView
                    android:id="@+id/title_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/earth"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/galaxy_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/milkyway_galaxy"
                    android:textColor="@color/subtext"
                    android:textSize="14sp" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#03A9F4"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_distance"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/distance_info"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/_54_6m_km"
                        android:textColor="@color/subtext"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_gravity"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/gravity_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/_3_711_m_ss"
                        android:textColor="@color/subtext"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:padding="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:letterSpacing="0.1"
                    android:text="@string/overview"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#03A9F4"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/overview_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="1dp"
                    android:text="@string/mars_is_the_fourth_planet_from_the_sun_and_the_second_smallest_planet_in_the_solar_system_being_larger_than_only_mercury_in_english_mars_carries_the_name_of_the_roman_god_of_war_and_is_often_referred_to_as_the_red_planet"
                    android:textColor="@color/subtext"
                    android:textSize="14sp" />
            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/secondary"
            android:drawableEnd="@drawable/ic_next"
            android:elevation="10dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/more"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            tools:ignore="AllCaps" />

    </LinearLayout>

</LinearLayout>